fix chatbot horizontal alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,9 +15,6 @@ body {
   flex-direction: column;
   overflow: hidden;
   font-family: Arial, sans-serif;
-  padding-left: 5em;
-  padding-right: 5em;
-  padding-top: 3em;
 
   background-image: url("https://media.discordapp.net/attachments/993702831850786886/1117894163686510752/bgJC_copy.jpg");
   /* background-image: url("https://images.unsplash.com/photo-1591311337241-cecfd26f1da1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2thdGVib2FyZGluZ3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"); */
@@ -46,7 +43,8 @@ header {
 }
 
 main {
-  padding: 20px;
+  padding: 20px 5em;
+  padding-top: 3em;
   flex: 1;
   display: flex;
   flex-direction: column;
